# converter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: normalize-pass-reviewer.md
.claude/skills/docx-visual-diff/: SKILL.md
.claude/skills/font-bengali-audit/: SKILL.md
.claude/skills/font-bengali-audit/references/: rendering.md
.claude/skills/font-bengali-audit/scripts/: font_audit.py
.claude/skills/verify-conversion/: SKILL.md
.github/workflows/: ci.yml  pages.yml
crates/banglakit-cli/: Cargo.toml
crates/banglakit-cli/src/: main.rs
crates/banglakit-cli/tests/: docx_integration.rs  pptx_integration.rs
crates/banglakit-core/: Cargo.toml
crates/banglakit-core/data/: english_words.txt  unicode_fonts.toml
crates/banglakit-core/data/bijoy/: font_families.toml  fonts.toml  mapping.toml
crates/banglakit-core/src/: classifier.rs  encoding.rs  english.rs  fonts.rs  lib.rs  mapping.rs  normalize.rs  policy.rs  transliterate.rs  visitor.rs
crates/banglakit-core/tests/: transliterate.rs
crates/banglakit-docx/: Cargo.toml
crates/banglakit-docx/src/: lib.rs  styles.rs  theme.rs
crates/banglakit-pptx/: Cargo.toml
crates/banglakit-pptx/src/: lib.rs
crates/banglakit-wasm/: Cargo.toml
crates/banglakit-wasm/src/: lib.rs
docs/: PATH-TO-OFFICE-ADDINS.md  PRD.md  SDD.md
docs/superpowers/plans/: 2026-05-11-google-workspace-addon.md
docs/superpowers/specs/: 2026-05-11-google-workspace-addon-design.md
examples/: test.docx
examples/wasm-demo/: README.md  index.html
examples/word-addin/: .gitignore  README.md  manifest.xml  package.json  tsconfig.json  webpack.config.js
examples/word-addin/src/taskpane/: taskpane.css  taskpane.html  taskpane.ts
google-addon/: .clasp.json  Common.gs  Docs.gs  README.md  Sheets.gs  Slides.gs  appsscript.json  dialog.html
scripts/: cross_reference_bijoy.py  font_cmap_audit.py
tests/fixtures/: mixed.docx  mixed.pptx  styled.docx  themed.docx
web/: app.js  index.html  privacy.html  style.css
