[workspace]
resolver = "2"
members = [
    "crates/banglakit-core",
    "crates/banglakit-docx",
    "crates/banglakit-cli",
    "crates/banglakit-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/banglakit/converter"
rust-version = "1.74"

[workspace.dependencies]
aho-corasick = "1.1"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
once_cell = "1"
regex = "1"
anyhow = "1"
thiserror = "1"
quick-xml = "0.36"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
