[package]
name = "banglakit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-function ANSI Bengali to Unicode transliterator and classifier (Bijoy and other encoding families)."

[dependencies]
aho-corasick.workspace = true
unicode-normalization.workspace = true
serde.workspace = true
toml.workspace = true
once_cell.workspace = true
regex.workspace = true

[dev-dependencies]
unicode-normalization.workspace = true
