[package]
name = "banglakit-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DOCX read/write adapter for banglakit-converter."

[dependencies]
banglakit-core = { path = "../banglakit-core" }
quick-xml.workspace = true
zip.workspace = true
anyhow.workspace = true
thiserror.workspace = true
