[package]
name = "banglakit-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PPTX read/write adapter for banglakit-converter."

[dependencies]
banglakit-core = { path = "../banglakit-core" }
quick-xml.workspace = true
zip.workspace = true
anyhow.workspace = true
